--- a/terms.html
+++ b/terms.html
@@ -6,22 +6,37 @@
   <title>Terms & Conditions • BT Farm – Cloud Miner</title>
   <style>
     :root{
-      --bg:#050210;
       --stroke: rgba(255,255,255,.12);
       --txt: rgba(255,255,255,.90);
       --muted: rgba(255,255,255,.64);
       --neon: #BFA6FF;
+      --p1:#6D28FF;
+      --p2:#3B1DFF;
     }
     body{
       margin:0;
-      font-family: -apple-system, BlinkMacSystemFont, "SF Pro Display", "SF Pro Text", Segoe UI, Roboto, Arial;
-      background: radial-gradient(1200px 900px at 20% 10%, rgba(109,40,255,.22), transparent 60%),
-                  radial-gradient(1000px 700px at 80% 30%, rgba(59,29,255,.18), transparent 60%),
-                  linear-gradient(135deg, rgba(5,2,16,.96), rgba(5,2,16,.98));
+      font-family:-apple-system,BlinkMacSystemFont,"SF Pro Display","SF Pro Text",Segoe UI,Roboto,Arial;
+      background:
+        radial-gradient(1200px 900px at 20% 10%, rgba(109,40,255,.22), transparent 60%),
+        radial-gradient(1000px 700px at 80% 30%, rgba(59,29,255,.18), transparent 60%),
+        linear-gradient(135deg, rgba(5,2,16,.96), rgba(5,2,16,.98));
       color: var(--txt);
       overflow-x:hidden;
     }
-    .wrap{ max-width: 880px; margin: 0 auto; padding: 22px 16px 36px; }
+    .wrap{ max-width: 900px; margin: 0 auto; padding: 22px 16px 36px; }
+    .topnav{ display:flex; gap:10px; flex-wrap:wrap; align-items:center; margin-bottom: 12px; }
+    .chip{
+      display:inline-flex; align-items:center; gap:8px;
+      padding: 10px 12px; border-radius: 999px;
+      background: rgba(255,255,255,.08);
+      border: 1px solid rgba(255,255,255,.12);
+      color: rgba(255,255,255,.82);
+      text-decoration:none;
+      font-weight: 900;
+      letter-spacing:.2px;
+      transition: transform .18s ease, opacity .18s ease;
+    }
+    .chip:active{ transform: scale(.98); opacity:.9; }
     .title{
       font-size: 34px; font-weight: 900; letter-spacing: .2px;
       margin: 8px 0 14px;
@@ -49,45 +64,58 @@
 </head>
 <body>
   <div class="wrap">
+    <div class="topnav">
+      <a class="chip" href="./privacy.html">Privacy</a>
+      <a class="chip" href="./terms.html">Terms</a>
+      <a class="chip" href="./support.html">Support</a>
+    </div>
+
     <div class="title">Terms & Conditions</div>
 
     <div class="card">
       <div class="small">BT Farm – Cloud Miner • Last updated: 2026-02-07</div>
 
-      <p><span class="accent">Simulation Notice:</span> This is a simulator/entertainment app. Any “mining”, “wallet”, “withdrawal”, “transactions”, or “earnings” shown in the app are simulated and have no real-world monetary value.</p>
+      <p><span class="accent">Simulation Notice:</span> This is a simulator/entertainment app. Any “mining”, “wallet”, “withdrawal”, “transactions”, or “earnings” displayed in the app are simulated and have no real-world monetary value.</p>
 
       <h3>1) Acceptance</h3>
-      <p>By using this app, you agree to these Terms.</p>
+      <p>By downloading or using the app, you agree to these Terms & Conditions.</p>
 
       <h3>2) Accounts</h3>
       <ul>
-        <li>You are responsible for maintaining the confidentiality of your account credentials.</li>
-        <li>You agree to provide accurate information where required.</li>
+        <li>You are responsible for your account and credentials.</li>
+        <li>You agree not to share your password or misuse accounts.</li>
       </ul>
 
-      <h3>3) Prohibited Use</h3>
+      <h3>3) Ads (Google AdMob)</h3>
       <ul>
-        <li>No cheating, automation, exploiting bugs, or manipulating the simulator to gain unfair rewards.</li>
-        <li>No hacking, reverse engineering, or attempting to disrupt the app or services.</li>
+        <li>The app may show ads provided by Google AdMob.</li>
+        <li>Ads may be personalized or non-personalized depending on your device settings and permissions.</li>
+        <li>We are not responsible for third-party ad content; you can report issues via Support.</li>
+      </ul>
+
+      <h3>4) Prohibited Use</h3>
+      <ul>
+        <li>No cheating, automation, exploiting bugs, or manipulating simulator balances.</li>
+        <li>No hacking, reverse engineering, or disrupting services.</li>
         <li>No unlawful use.</li>
       </ul>
 
-      <h3>4) Features & Availability</h3>
-      <p>We may modify or discontinue features at any time. We do not guarantee uninterrupted availability.</p>
+      <h3>5) Features & Availability</h3>
+      <p>We may modify, suspend, or discontinue features at any time. Availability is not guaranteed.</p>
 
-      <h3>5) Withdrawals (Simulated)</h3>
-      <p>Any withdrawal request flow is simulated. Approvals/rejections are part of the simulator experience and do not represent real payment processing.</p>
+      <h3>6) Withdrawals (Simulated)</h3>
+      <p>Any withdrawal request flow is simulated. Approvals/rejections are part of gameplay and do not represent real payment processing.</p>
 
-      <h3>6) Disclaimer</h3>
-      <p>The app is provided “as is” without warranties. We are not responsible for any damages arising from use of the app.</p>
+      <h3>7) Disclaimer</h3>
+      <p>The app is provided “as is” without warranties of any kind.</p>
 
-      <h3>7) Limitation of Liability</h3>
-      <p>To the maximum extent permitted by law, we are not liable for indirect, incidental, or consequential damages.</p>
+      <h3>8) Limitation of Liability</h3>
+      <p>To the maximum extent allowed by law, we are not liable for indirect, incidental, or consequential damages arising from your use of the app.</p>
 
-      <h3>8) Termination</h3>
+      <h3>9) Termination</h3>
       <p>We may suspend or terminate access if you violate these Terms.</p>
 
-      <h3>9) Contact</h3>
+      <h3>10) Contact</h3>
       <p>Email: <span class="accent">jaydeeplathiya@icloud.com</span></p>
 
       <p class="small">By using the app, you agree to these Terms & Conditions.</p>
